[package]
name = "dtab"
version = "0.0.2"
authors = ["Eliza Weisman <eliza@elizas.website>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hawkw/dtab.rs"
documentation = "https://docs.rs/dtab"
description = "a library for parsing and constructing Finagle/Linkerd delegation tables"
# [dependencies.nom]
# version = "^3.0"
# features = ["regexp"]

[dependencies]
# regex = "^0.2.2"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
pretty_assertions = "0.2.0"

[badges.travis-ci]
repository = "hawkw/dtab.rs"
branch = "master"

[badges.codecov]
repository = "http://github.com/hawkw/dtab.rs"
branch = "master"
service = "github"
