[package]
name = "dtab"
version = "0.0.2"
authors = ["Eliza Weisman <eliza@elizas.website>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hawkw/dtab.rs"
documentation = "https://docs.rs/dtab"
description = "a library for parsing and constructing Finagle/Linkerd delegation tables"

[dependencies.lazy_static]
version = "0.2"
optional = true

[dependencies.regex]
version = "0.2"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dev-dependencies]
pretty_assertions = "0.2.0"

[badges.travis-ci]
repository = "hawkw/dtab.rs"
branch = "master"

[badges.codecov]
repository = "http://github.com/hawkw/dtab.rs"
branch = "master"
service = "github"

[features]
default = ["serialize"]
unstable = ["parse"]
serialize = ["serde", "serde_derive"]
parse = ["regex", "lazy_static"]
